[gd_scene load_steps=5 format=3 uid="uid://dxijm1wrbqc5i"]

[ext_resource type="Texture2D" uid="uid://cco7y435rp1j0" path="res://Art/Revised/question mark.png" id="1_rfmq5"]
[ext_resource type="Script" uid="uid://bmcx2f3hat506" path="res://Scripts/New/goal.gd" id="1_yok7w"]
[ext_resource type="Texture2D" uid="uid://dm0qw5g500uvj" path="res://Art/Revised/questionMarkBeforeWin.png" id="3_ofm3y"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yok7w"]
size = Vector2(16, 16)

[node name="Goal" type="Node2D"]
script = ExtResource("1_yok7w")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_yok7w")

[node name="QuestionMarkAfterWin" type="Sprite2D" parent="Area2D"]
texture = ExtResource("1_rfmq5")

[node name="QuestionMarkBeforeWin" type="Sprite2D" parent="Area2D"]
texture = ExtResource("3_ofm3y")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
